--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -19,6 +19,7 @@
             font-size: 15px
             &:nth-last-child(-n+1)
                 margin-right: 0
+            // Эффект подчёркивания
             &:after
                 content: ""
                 display: block
@@ -48,6 +49,4 @@
         align-items: center
         padding: 15px 0
 
-
-// Стили для красоты
     
