--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,9 +1,22 @@
 @import "header"
 @import "variables"
+@import "hero"
 
-body 
-    font-family: 'Playfair Display', serif
+*
+    margin: 0
+    padding: 0
 
 .container
     max-width: 1110px
     margin: 0 auto
+    font-family: 'Playfair Display', serif
+
+.button
+    padding: 12px 22px
+    border: 3px solid $white
+    text-decoration: none
+    color: $white
+    font-family: 'Poppins', sans-serif
+    font-style: normal
+    font-weight: 400
+    font-size: 16px
