--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -1,6 +1,9 @@
 @import "variables"
 
 .header
+    position: fixed
+    background-color: $white
+    width: 100%
     &__logo
         margin: 0
         font-size: 24px
@@ -42,7 +45,11 @@
                 transition: width 0.25s  /* Время эффекта */
         &__link
             text-decoration: none
-            color: $black
+            color: #4b4b4b
+            transition-property: color
+            transition-duration: .2s
+            &:hover
+                color: $black
     &-content
         display: flex
         justify-content: space-between
