--- a/sass/_hero.sass
+++ b/sass/_hero.sass
@@ -4,6 +4,7 @@
     background-repeat: no-repeat
     background-position: center
     color: $white
+    margin-bottom: 30px
     &-wrapper
         padding: 220px 20px
         &__title
@@ -14,6 +15,8 @@
             align-items: center
             text-decoration: none
             color: $white
+            transition-property: background-color, color
+            transition-duration: .2s
             &:hover
                 background-color: $white
                 color: $black
@@ -24,3 +27,5 @@
                 margin-left: 8px
                 width: 24px
                 height: 24px
+                transition-property: all
+                transition-duration: .2s
