--- a/sass/_hero.sass
+++ b/sass/_hero.sass
@@ -1,5 +1,5 @@
 .hero
-    background-image: url(/img/hero-bg.jpg)
+    background-image: url(./img/hero-bg.jpg)
     background-color: $white
     background-repeat: no-repeat
     background-position: center
@@ -21,9 +21,9 @@
                 background-color: $white
                 color: $black
                 &::after
-                    content: url('/img/arrow-black.svg')
+                    content: url('./img/arrow-black.svg')
             &::after
-                content: url('/img/arrow-white.svg')
+                content: url('./img/arrow-white.svg')
                 margin-left: 8px
                 width: 24px
                 height: 24px
