-create "section prices + connect js files"

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -25,14 +25,13 @@ html
     font-family: 'Playfair Display', serif
 
 .button
-    padding: 12px 22px
-    border: 3px solid $white
     text-decoration: none
     color: $white
+    cursor: pointer
     font-family: 'Poppins', sans-serif
     font-style: normal
-    font-weight: 400
-    font-size: 16px
+    &:active
+        scale: 90%
 
 .title
     font-size: 40px
