--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -4,6 +4,7 @@
     position: fixed
     background-color: $white
     width: 100%
+    z-index: 999
     &__logo
         margin: 0
         font-size: 24px
