--- a/sass/_hero.sass
+++ b/sass/_hero.sass
@@ -15,6 +15,10 @@
             align-items: center
             text-decoration: none
             color: $white
+            padding: 12px 22px
+            font-weight: 400
+            font-size: 16px
+            border: 3px solid $white
             transition-property: background-color, color
             transition-duration: .2s
             &:hover
