--- a/sass/_prices.sass
+++ b/sass/_prices.sass
@@ -5,3 +5,73 @@
         align-items: center
         justify-content: center
         margin-bottom: 30px
+    &-slider
+        display: flex
+        align-items: stretch
+.slick
+    &-track
+        display: flex
+        align-items: flex-start
+        align-items: stretch
+    &-list
+        overflow: hidden
+    &-slider
+        display: flex
+        align-items: stretch
+
+.slide
+    display: flex
+    flex-direction: column
+    flex-grow: 1
+    flex-basis: 0
+    text-align: center
+    max-width: 290px
+    padding: 25px
+    border: 3px solid $black
+    margin-right: 30px
+    &__img
+        display: block
+        max-width: 235px
+        max-height: 250px
+        margin-bottom: 6px
+    &__img img
+        object-fit: cover
+        height: 250px
+        width: 235px
+    &-text
+        position: relative
+        height: 100%
+        font-family: 'Poppins', sans-serif
+        &__title
+            margin-bottom: 5px
+            font-style: normal
+            font-weight: 400
+            font-size: 16px
+            line-height: 24px
+        &__line
+            color: $black
+            margin-bottom: 7px
+        &__subtitle
+            text-align: left
+            margin-bottom: 70px
+            color: $light-black
+            font-size: 13px
+            line-height: 20px
+        &__button
+            background-color: #bdbdbd
+            position: absolute
+            padding: 5px 10px
+            font-size: 14px
+            right: 0
+            bottom: 0
+            border: none
+            box-shadow: none
+            transition: all .2s
+            &:hover
+                background-color: $black
+                color: $white
+                box-shadow: 5px 5px $light-black
+                -webkit-transform: translateX(-7px)
+                transform: translateX(-7px)
+                
+            
