--- a/sass/_prices.sass
+++ b/sass/_prices.sass
@@ -58,20 +58,21 @@
             font-size: 13px
             line-height: 20px
         &__button
-            background-color: #bdbdbd
+            background-color: #424242
             position: absolute
             padding: 5px 10px
             font-size: 14px
             right: 0
             bottom: 0
             border: none
-            box-shadow: none
-            transition: all .2s
+            box-shadow: 5px 5px $light-black
+            transition: all .05s
             &:hover
                 background-color: $black
                 color: $white
-                box-shadow: 5px 5px $light-black
-                -webkit-transform: translateX(-7px)
-                transform: translateX(-7px)
+            &:active
+                box-shadow: none
+                -webkit-transform: translate(7px, 7px)
+                transform: translate(7px, 7px)
                 
             
