-create "AutoResizeTextarea + about"

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,9 +1,4 @@
-@import "header"
 @import "variables"
-@import "hero"
-@import "portfolio"
-@import "prices"
-@import "about"
 
 *
     margin: 0
@@ -40,3 +35,10 @@ html
     color: $light-black
     font-weight: 600
     font-size: 14px
+
+@import "header"
+@import "hero"
+@import "portfolio"
+@import "prices"
+@import "about"
+@import "contacts"
