--- a/sass/_about.sass
+++ b/sass/_about.sass
@@ -1,4 +1,6 @@
 .about
+    margin-bottom: 50px
+    overflow: hidden
     &-wrapper
         display: flex
         position: relative
@@ -7,8 +9,9 @@
             content: ''
             position: absolute
             top: -70px
+            left: -50px
             z-index: -1
-            width: 75%
+            width: 78%
             height: 300px
             background-color: $dark-blue
     &-header
@@ -57,6 +60,8 @@
                 height: 10px
                 width: 10px
                 z-index: 10
+            &:hover
+                text-decoration: underline
     &-image
         display: flex
         align-self: flex-end
