-fix "slider + add anim on button in contacts"

--- a/sass/_prices.sass
+++ b/sass/_prices.sass
@@ -9,19 +9,24 @@
     &-slider
         display: flex
         align-items: stretch
+        max-width: 1050px
+        margin: 0 auto
 .slick
     &-track
         display: flex
         align-items: flex-start
         align-items: stretch
+        min-width: 0
     &-list
         overflow: hidden
     &-slider
         display: flex
         align-items: stretch
+        min-width: 0
 
 .slide
     display: flex
+    min-width: 0
     flex-direction: column
     flex-grow: 1
     flex-basis: 0
