--- a/sass/_contacts.sass
+++ b/sass/_contacts.sass
@@ -34,15 +34,28 @@
             top: -0.9rem
             font-size: 12px
         &__button
+            position: relative
             margin-left: auto
-            right: 0
+            overflow: hidden
             padding: 10px 15px
             color: $black
             background: none
-            transition: background-color .2s, color .2s
-            &:hover
+            // transition: background-color .2s, color .2s
+            transition: all .2s
+            &::after
+                content: ""
+                position: absolute
                 background-color: $black
+                width: 100%
+                height: 100%
+                left: -100%
+                top: 0
+                transition: all .2s
+                z-index: -1
+            &:hover
                 color: $white
+                &::after
+                    left: 0
 .input
     &-block
         width: 45%
