--- a/sass/main.sass
+++ b/sass/main.sass
@@ -18,6 +18,7 @@ html
 .container
     max-width: 1110px
     margin: 0 auto
+    overflow: hidden
     font-family: 'Playfair Display', serif
 
 .button
@@ -42,3 +43,4 @@ html
 @import "prices"
 @import "about"
 @import "contacts"
+@import "footer"
