-add "modal windows + closeModal on Esc"

--- a/sass/_hero.sass
+++ b/sass/_hero.sass
@@ -1,8 +1,10 @@
 .hero
     background-image: url('../img/hero-bg.jpg')
+    background-attachment: fixed
     background-color: $white
     background-repeat: no-repeat
     background-position: center
+    background-size: 100vw
     color: $white
     margin-bottom: 30px
     &-wrapper
