-add "new modals" -fix"font on Montserrat"

--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -15,7 +15,7 @@
         padding: 0 /* Отступ слева в браузере Firefox, Safari, Chrome */
         &__item
             position: relative
-            font-family: 'Poppins', sans-serif
+            font-family: Montserrat, sans-serif
             font-weight: 600
             list-style-type: none /* Убираем маркеры */
             margin-right: 85px
