--- a/sass/_prices.sass
+++ b/sass/_prices.sass
@@ -47,7 +47,7 @@
     &-text
         position: relative
         height: 100%
-        font-family: 'Poppins', sans-serif
+        font-family: Montserrat, sans-serif
         &__title
             margin-bottom: 5px
             font-style: normal
