--- a/sass/main.sass
+++ b/sass/main.sass
@@ -25,14 +25,14 @@ html
     text-decoration: none
     color: $white
     cursor: pointer
-    font-family: 'Poppins', sans-serif
+    font-family: Montserrat, sans-serif
     font-style: normal
 
 .title
     font-size: 40px
 
 .subtitle
-    font-family: "Poppins", sans-serif
+    font-family: Montserrat, sans-serif
     color: $light-black
     font-weight: 600
     font-size: 14px
