--- a/sass/_about.sass
+++ b/sass/_about.sass
@@ -24,7 +24,7 @@
         top: 20px
         margin-right: 90px
         max-width: 375px
-        font-family: 'Poppins',sans-serif
+        font-family: Montserrat,sans-serif
         font-style: normal
         font-weight: 400
         font-size: 14px
@@ -35,11 +35,10 @@
         right: 225px
         display: flex
         flex-wrap: wrap
-        max-height: 75px
-        max-width: 170px
+        max-width: 184px
         justify-content: center
         padding: 10px 13px
-        font-family: 'Poppins',sans-serif
+        font-family: Montserrat,sans-serif
         background-color: $black
         color: $white
         z-index: 10
