--- a/sass/_modal.sass
+++ b/sass/_modal.sass
@@ -1,5 +1,5 @@
 .modal
-    font-family: Poppins, sans-serif
+    font-family: Montserrat, sans-serif
     &__overlay
         position: fixed
         left: 0
@@ -19,7 +19,7 @@
         position: fixed
         top: 50%
         left: 50%
-        max-width: 500px
+        max-width: 700px
         padding: 30px 50px
         background-color: $dark-blue
         transform: translate(-50%, -50%)
@@ -37,6 +37,7 @@
         position: absolute
         right: 30px
         top: 10px
+        font-size: 20px
         text-decoration: none
         color: $black
     &-content
@@ -46,3 +47,7 @@
                 width: 100%
                 height: 300px
                 object-fit: cover
+        &__title
+            font-family: Playfair Display, sans-serif
+            font-size: 28px
+            margin-bottom: 10px
