--- a/sass/main.sass
+++ b/sass/main.sass
@@ -15,6 +15,11 @@ html
     &::-webkit-scrollbar-thumb
         background: $black
         border-radius: 5px
+
+body.lock
+    overflow: hidden
+
+
 .container
     max-width: 1110px
     margin: 0 auto
