-add "adaptive to 772px"

--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -1,4 +1,5 @@
 .footer
+    position: relative
     background-color: $black
     padding: 26px 0
     &-wrapper
@@ -20,6 +21,9 @@
         &:hover
             transform: translateY(-5px)
     &-text
+        position: absolute
+        left: 50%
+        transform: translateX(-50%)
         text-align: center
     &-info
         display: flex
@@ -31,3 +35,8 @@
             transition: all .2s
             &:hover
                 transform: translateY(5px)
+
+@media ( max-width: 992px )
+    .footer
+        &-wrapper
+            padding: 0 20px
