--- a/sass/_prices.sass
+++ b/sass/_prices.sass
@@ -81,4 +81,15 @@
                 -webkit-transform: translate(3px, 3px)
                 transform: translate(3px, 3px)
                 
-            
+@media (max-width: 1200px)
+    .prices
+        margin-bottom: 70px
+    .slide
+        margin-right: 20px
+        &-text
+            &__subtitle
+                margin-bottom: 0
+        &__img
+            overflow: hidden
+            & img
+                object-fit: cover
