--- a/sass/_about.sass
+++ b/sass/_about.sass
@@ -75,3 +75,22 @@
             width: 100%
             height: 100%
             object-fit: cover
+
+@media (max-width: 1200px)
+    .about
+        margin-bottom: 0
+        &-form
+            right: 22%
+            top: 5%
+        &__text
+            max-width: 500px
+        &-image
+            top: -300px
+        &-wrapper
+            flex-direction: column
+            padding-left: 20px
+            padding-top: 20px
+            &::after
+                top: 0
+        &-header
+            align-items: flex-start
