--- a/sass/_contacts.sass
+++ b/sass/_contacts.sass
@@ -118,3 +118,9 @@
     top: 20%
     cursor: text
     transition: top .2s, font-size .2s
+
+@media ( max-width: 992px )
+    .contacts
+        &-wrapper
+            padding: 20px
+    
