--- a/sass/_portfolio.sass
+++ b/sass/_portfolio.sass
@@ -19,3 +19,9 @@
         &__iframe
             width: 100%
             height: 100%
+
+@media ( max-width: 992px )
+    .portfolio
+        &-wrapper
+            grid-template-columns: repeat(2, 1fr)
+            padding: 0 20px
