--- a/sass/main.sass
+++ b/sass/main.sass
@@ -42,6 +42,18 @@ body.lock
     font-weight: 600
     font-size: 14px
 
+@media (max-width: 1200px)
+    .container
+        max-width: 960px
+    .title
+        font-size: 24px
+@media ( max-width: 992px )
+    .button
+        &:hover
+            color: $white
+            background: none
+    
+
 @import "header"
 @import "hero"
 @import "portfolio"
