--- a/sass/_portfolio.sass
+++ b/sass/_portfolio.sass
@@ -25,3 +25,15 @@
         &-wrapper
             grid-template-columns: repeat(2, 1fr)
             padding: 0 20px
+@media (max-width: 768px)
+    .portfolio
+        &-wrapper
+            grid-gap: 10px
+@media (max-width: 580px)
+    .portfolio
+        &-wrapper
+            grid-template-columns: repeat(1, 1fr)
+@media (max-width: 480px)
+    .portfolio
+        &-wrapper
+            grid-auto-rows: 200px
