--- a/sass/main.sass
+++ b/sass/main.sass
@@ -52,6 +52,14 @@ body.lock
         &:hover
             color: $white
             background: none
+@media (max-width: 768px)
+    .container
+        max-width: 560px
+
+@media ( max-width: 480px)
+    .container
+        max-width: 320px
+    
     
 
 @import "header"
