-fix "iframe + slider"

--- a/sass/_modal.sass
+++ b/sass/_modal.sass
@@ -64,3 +64,20 @@
     .modal
         &__dialog
             width: 70%
+
+@media (max-width: 580px)
+    .modal__dialog
+        padding: 15px 20px
+    .modal-content
+        &__text
+            font-size: 12px
+
+@media (max-width: 580px)
+    .modal__dialog
+        width: 85%
+    .modal-content
+        &__title
+            font-size: 20px
+            margin-bottom: 5px
+        &__photo--img
+            height: 250px
