--- a/sass/_portfolio.sass
+++ b/sass/_portfolio.sass
@@ -13,12 +13,29 @@
         grid-gap: 30px
     &-item
         display: block
+        position: relative
         width: 100%
         height: 100%
         background-color: #000
+        cursor: pointer
+        box-shadow: 0
+        transition: box-shadow .2s ease
+        &:hover
+            box-shadow: 12px 12px 2px 1px #e5000033
         &__iframe
             width: 100%
             height: 100%
+        &__play
+            width: 64px
+            height: 64px
+            position: absolute
+            left: 50%
+            top: 50%
+            transform: translate(-50%, -50%)
+            transition: width .2s ease, height .2s ease
+            &:hover
+                width: 80px
+                height: 80px
 
 @media ( max-width: 992px )
     .portfolio
