--- a/sass/_prices.sass
+++ b/sass/_prices.sass
@@ -6,11 +6,6 @@
         align-items: center
         justify-content: center
         margin-bottom: 30px
-    &-slider
-        display: flex
-        align-items: stretch
-        max-width: 1050px
-        margin: 0 auto
 .slick
     &-track
         display: flex
@@ -31,7 +26,7 @@
     flex-grow: 1
     flex-basis: 0
     text-align: center
-    max-width: 290px
+    // max-width: 290px
     padding: 25px
     border: 3px solid $black
     margin-right: 30px
@@ -43,7 +38,7 @@
     &__img img
         object-fit: cover
         height: 250px
-        width: 235px
+        width: 280px
     &-text
         position: relative
         height: 100%
@@ -93,3 +88,6 @@
             overflow: hidden
             & img
                 object-fit: cover
+@media (max-width: 992px)
+    .slide
+        padding: 15px
